seção-10 projeto pratico: portfolio - aula 61

--- a/curso-angular-portfolio/src/app/modules/portfolio/components/header/header.html
+++ b/curso-angular-portfolio/src/app/modules/portfolio/components/header/header.html
@@ -1,6 +1,6 @@
 <header>
   <img
-    src="assets/img/self-dunas.jpg"
+    src="assets/img/self-dunas.jpeg"
     alt="Patrick Santos - Foto de Perfil"
     width="130px"
     height="130px"
