seção-10 projeto pratico: portfolio - aula 64

--- a/curso-angular-portfolio/src/app/modules/portfolio/components/header/header.html
+++ b/curso-angular-portfolio/src/app/modules/portfolio/components/header/header.html
@@ -17,8 +17,8 @@
     </p>
     <p>Rio de Janeiro - RJ, Brasil</p>
     <p>
-      Olá! Meu nome é <strong>Patrick Santos</strong>, tenho 38 anos e sou Desenvolvedor Web Full
-      Stack.
+      Olá! Meu nome é <strong>Patrick Santos</strong>, tenho {{ age }} anos e sou Desenvolvedor Web
+      Full Stack.
     </p>
 
     <p>
