--- a/curso-angular-portfolio/src/app/modules/portfolio/components/projects/projects.html
+++ b/curso-angular-portfolio/src/app/modules/portfolio/components/projects/projects.html
@@ -4,10 +4,11 @@
     @for (item of arrayProjects(); track item) {
 
     <li>
-      <button>
+      <button (click)="openDialog(item)">
         <img
           [src]="item.src"
           [alt]="item.alt"
+          [title]="item.title"
           [attr.width]="item.with"
           [attr.height]="item.height"
           loading="lazy"
