--- a/curso-angular-portfolio/src/styles.scss
+++ b/curso-angular-portfolio/src/styles.scss
@@ -1,3 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'scss/_index';
 @import '@fortawesome/fontawesome-free/css/all.min.css';
-@import 'scss/index';
