--- a/curso-angular-portfolio/src/app/modules/portfolio/components/header/header.html
+++ b/curso-angular-portfolio/src/app/modules/portfolio/components/header/header.html
@@ -53,7 +53,7 @@
     <nav>
       <ul>
         <li>
-          <a href="/assets/pdf/cv.pdf" target="_blank" class="btn btn-primary"> Doawnload Cv </a>
+          <a href="assets/pdf/cv.pdf" target="_blank" class="btn btn-primary"> Doawnload Cv </a>
         </li>
 
         <li>
@@ -71,7 +71,7 @@
     <section>
       <figure>
         <img
-          src="/assets/icons/knowledge/whatsapp.svg"
+          src="assets/icons/knowledge/whatsapp.svg"
           alt="Icone para contato do whatsapp"
           width="22px"
           height="24px"
